// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionModal Component Dismiss on demand 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}
>
  <RNCSafeAreaView
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "flexGrow": 1,
          "paddingHorizontal": 25,
          "paddingTop": 20,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            Object {
              "fontWeight": "normal",
              "marginTop": 90,
              "textAlign": "center",
            },
          ]
        }
        testID="com.ariesbifold:id/CredentialOnTheWay"
      >
        Connection.JustAMoment
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "marginTop": 20,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <
          fill="#FFFFFF"
          height={130}
          style={
            Object {
              "position": "absolute",
            }
          }
          width={130}
        />
        <View
          style={
            Object {
              "transform": Array [
                Object {
                  "rotate": "360deg",
                },
              ],
            }
          }
        >
          <
            fill="#FFFFFF"
            height={250}
            width={250}
          />
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`ConnectionModal Component Renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <RNCSafeAreaView
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "flexGrow": 1,
          "paddingHorizontal": 25,
          "paddingTop": 20,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            Object {
              "fontWeight": "normal",
              "marginTop": 90,
              "textAlign": "center",
            },
          ]
        }
        testID="com.ariesbifold:id/CredentialOnTheWay"
      >
        Connection.JustAMoment
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "marginTop": 20,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <
          fill="#FFFFFF"
          height={130}
          style={
            Object {
              "position": "absolute",
            }
          }
          width={130}
        />
        <View
          style={
            Object {
              "transform": Array [
                Object {
                  "rotate": "0deg",
                },
              ],
            }
          }
        >
          <
            fill="#FFFFFF"
            height={250}
            width={250}
          />
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "marginBottom": 20,
            "marginTop": "auto",
          },
        ]
      }
    >
      <View
        accessibilityLabel="Loading.BackToHome"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderColor": "#42803E",
            "borderRadius": 4,
            "borderWidth": 2,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/BackToHome"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#42803E",
                "fontSize": 18,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              false,
            ]
          }
        >
          Loading.BackToHome
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`ConnectionModal Component Updates after delay 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <RNCSafeAreaView
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "flexGrow": 1,
          "paddingHorizontal": 25,
          "paddingTop": 20,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            Object {
              "fontWeight": "normal",
              "marginTop": 90,
              "textAlign": "center",
            },
          ]
        }
        testID="com.ariesbifold:id/CredentialOnTheWay"
      >
        Connection.JustAMoment
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "marginTop": 20,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <
          fill="#FFFFFF"
          height={130}
          style={
            Object {
              "position": "absolute",
            }
          }
          width={130}
        />
        <View
          style={
            Object {
              "transform": Array [
                Object {
                  "rotate": "360deg",
                },
              ],
            }
          }
        >
          <
            fill="#FFFFFF"
            height={250}
            width={250}
          />
        </View>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Object {
            "marginTop": 20,
            "textAlign": "center",
          },
        ]
      }
      testID="com.ariesbifold:id/TakingTooLong"
    >
      Connection.TakingTooLong
    </Text>
    <View
      style={
        Array [
          Object {
            "marginBottom": 20,
            "marginTop": "auto",
          },
        ]
      }
    >
      <View
        accessibilityLabel="Loading.BackToHome"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderColor": "#42803E",
            "borderRadius": 4,
            "borderWidth": 2,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/BackToHome"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#42803E",
                "fontSize": 18,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              false,
            ]
          }
        >
          Loading.BackToHome
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;
